--- a/MusScribeF1Augmentation.ipynb
+++ b/MusScribeF1Augmentation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGmF0cJBPWcFihzs9+mi60",
+      "authorship_tag": "ABX9TyMWj6dKPyBDMEONY0wjTeoN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,18 +23,18 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/LarsMonstad/midifiles/blob/main/MusScribeF1Augmentation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/LarsMonstad/AMT-evaluation/blob/main/MusScribeF1Augmentation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xiYIXgzW1BWx",
-        "outputId": "b9af696d-163e-4b0a-cef6-9f7da531ac96"
+        "outputId": "806c5983-ae19-41d4-aaf9-c1988e2e5304"
       },
       "outputs": [
         {
@@ -43,7 +43,7 @@
           "text": [
             "Collecting pretty_midi\n",
             "  Downloading pretty_midi-0.2.10.tar.gz (5.6 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m23.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m17.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: numpy>=1.7.0 in /usr/local/lib/python3.11/dist-packages (from pretty_midi) (1.26.4)\n",
             "Collecting mido>=1.1.16 (from pretty_midi)\n",
@@ -51,17 +51,17 @@
             "Requirement already satisfied: six in /usr/local/lib/python3.11/dist-packages (from pretty_midi) (1.17.0)\n",
             "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from mido>=1.1.16->pretty_midi) (24.2)\n",
             "Downloading mido-1.3.3-py3-none-any.whl (54 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m54.6/54.6 kB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m54.6/54.6 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hBuilding wheels for collected packages: pretty_midi\n",
             "  Building wheel for pretty_midi (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pretty_midi: filename=pretty_midi-0.2.10-py3-none-any.whl size=5592287 sha256=11974e8b9e6db089539cfa0a34184b46647772a732626ec262809a3ce9acd989\n",
+            "  Created wheel for pretty_midi: filename=pretty_midi-0.2.10-py3-none-any.whl size=5592287 sha256=ae7f9c9f808994491545990064c3ffdbd104d8b33cb6bd1a6a4ce17c01d82dcd\n",
             "  Stored in directory: /root/.cache/pip/wheels/e6/95/ac/15ceaeb2823b04d8e638fd1495357adb8d26c00ccac9d7782e\n",
             "Successfully built pretty_midi\n",
             "Installing collected packages: mido, pretty_midi\n",
             "Successfully installed mido-1.3.3 pretty_midi-0.2.10\n",
             "Collecting mir_eval\n",
             "  Downloading mir_eval-0.7.tar.gz (90 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m90.7/90.7 kB\u001b[0m \u001b[31m6.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m90.7/90.7 kB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: numpy>=1.7.0 in /usr/local/lib/python3.11/dist-packages (from mir_eval) (1.26.4)\n",
             "Requirement already satisfied: scipy>=1.0.0 in /usr/local/lib/python3.11/dist-packages (from mir_eval) (1.13.1)\n",
@@ -69,7 +69,7 @@
             "Requirement already satisfied: six in /usr/local/lib/python3.11/dist-packages (from mir_eval) (1.17.0)\n",
             "Building wheels for collected packages: mir_eval\n",
             "  Building wheel for mir_eval (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for mir_eval: filename=mir_eval-0.7-py3-none-any.whl size=100699 sha256=bd16d3f85e7770a05c92118446dfec58ef237c8bdb5008a04723eeced8c6ab20\n",
+            "  Created wheel for mir_eval: filename=mir_eval-0.7-py3-none-any.whl size=100699 sha256=0f258b447a904cf002f668fd7800f812003d8be46f28286c9cefa306856fb465\n",
             "  Stored in directory: /root/.cache/pip/wheels/7a/37/52/2a4c9f90d1b3414709ae2fe4627b3c13894f8922d3aade1f9e\n",
             "Successfully built mir_eval\n",
             "Installing collected packages: mir_eval\n",
@@ -85,28 +85,28 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/LarsMonstad/midifiles.git"
+        "!git clone https://github.com/LarsMonstad/AMT-evaluation.git"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DR_Pj9Iv2dMp",
-        "outputId": "84c9b017-e13a-4bd1-b785-58146a7d8eef"
+        "outputId": "5a32361f-0dbf-4690-fea3-e2f20373d87c"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'midifiles'...\n",
-            "remote: Enumerating objects: 198, done.\u001b[K\n",
-            "remote: Counting objects: 100% (49/49), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (49/49), done.\u001b[K\n",
-            "remote: Total 198 (delta 12), reused 0 (delta 0), pack-reused 149 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (198/198), 183.72 KiB | 4.17 MiB/s, done.\n",
-            "Resolving deltas: 100% (14/14), done.\n"
+            "Cloning into 'AMT-evaluation'...\n",
+            "remote: Enumerating objects: 212, done.\u001b[K\n",
+            "remote: Counting objects: 100% (63/63), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (63/63), done.\u001b[K\n",
+            "remote: Total 212 (delta 17), reused 3 (delta 0), pack-reused 149 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (212/212), 445.42 KiB | 4.79 MiB/s, done.\n",
+            "Resolving deltas: 100% (19/19), done.\n"
           ]
         }
       ]
@@ -251,19 +251,19 @@
         "\n",
         "def main():\n",
         "    # Configuration\n",
-        "    REFERENCE_FILE = \"midifiles/Spretten_original.mid\"\n",
+        "    REFERENCE_FILE = \"AMT-evaluation/midi-files/Spretten_original.mid\"\n",
         "\n",
         "    MODEL_CONFIGS = {\n",
-        "        \"HPPNet(Base)\": \"midifiles/runs/transcriber-230207-224701_nozzle/model-99000_evaluate/MAESTRO/test/Spretten_original.flac'.pred.mid\",\n",
-        "        \"HPPNet(Aug)\": \"midifiles/runs/transcriber-230429-124319_bombs/model-60000_evaluate/MAESTRO/test/Spretten_original.flac'.pred.mid\",\n",
-        "        \"Sony HFT\": \"midifiles/Spretten_original_transcribedsony004001.mid\",\n",
-        "        \"Basic Pitch\": \"midifiles/Spretten_basic_pitch_transcription.mid\",\n",
-        "        \"SemiCRF\": \"midifiles/Spretten_original_transcribed_transkun.mid\",\n",
-        "        \"SemiCRF(epoch153)\": \"midifiles/Spretten_original_transkun153.mid\",\n",
-        "        \"SemiCRF(epoch166)\": \"midifiles/Spretten_original_transkun166.mid\",\n",
-        "        \"SemiCRF(epoch175)\": \"midifiles/Spretten_original_transkun175.mid\",\n",
-        "        \"SemiCRF(epoch189)\": \"midifiles/Spretten_original_transkun189.mid\",\n",
-        "        \"SemiCRF(epoch239)\": \"midifiles/Spretten_original_transkun239.mid\"\n",
+        "        \"HPPNet(Base)\": \"AMT-evaluation/midi-files/runs/transcriber-230207-224701_nozzle/model-99000_evaluate/MAESTRO/test/Spretten_original.flac'.pred.mid\",\n",
+        "        \"HPPNet(Aug)\": \"AMT-evaluation/midi-files/runs/transcriber-230429-124319_bombs/model-60000_evaluate/MAESTRO/test/Spretten_original.flac'.pred.mid\",\n",
+        "        \"Sony HFT\": \"AMT-evaluation/midi-files/Spretten_original_transcribedsony004001.mid\",\n",
+        "        \"Basic Pitch\": \"AMT-evaluation/midi-files/Spretten_basic_pitch_transcription.mid\",\n",
+        "        \"SemiCRF\": \"AMT-evaluation/midi-files/Spretten_original_transcribed_transkun.mid\",\n",
+        "        \"SemiCRF(epoch153)\": \"AMT-evaluation/midi-files/Spretten_original_transkun153.mid\",\n",
+        "        \"SemiCRF(epoch166)\": \"AMT-evaluation/midi-files/Spretten_original_transkun166.mid\",\n",
+        "        \"SemiCRF(epoch175)\": \"AMT-evaluation/midi-files/Spretten_original_transkun175.mid\",\n",
+        "        \"SemiCRF(epoch189)\": \"AMT-evaluation/midi-files/Spretten_original_transkun189.mid\",\n",
+        "        \"SemiCRF(epoch239)\": \"AMT-evaluation/midi-files/Spretten_original_transkun239.mid\"\n",
         "    }\n",
         "\n",
         "    # Fixed chronological order\n",
@@ -353,9 +353,9 @@
           "height": 833
         },
         "id": "vhn98kE51NNR",
-        "outputId": "03daf5a8-9680-4e9b-d41a-30f18cf87f90"
+        "outputId": "7a05e106-66df-4fc1-c06b-2c6cf9ce2976"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,18 +537,18 @@
         "\n",
         "def main():\n",
         "    # Configuration\n",
-        "    REFERENCE_FILE = \"midifiles/Godvaersdagen_original1.mid\"\n",
+        "    REFERENCE_FILE = \"AMT-evaluation/midi-files/Godvaersdagen_original1.mid\"\n",
         "\n",
         "    MODEL_CONFIGS = {\n",
-        "        \"HPPNet Base\": \"midifiles/runs/transcriber-230425-011304_year/model-60000_evaluate/MAESTRO/test/Godvaersdagen_original1.flac'.pred.mid\",\n",
-        "        \"HPPNet Augmented\": \"midifiles/runs/transcriber-230429-124319_bombs/model-60000_evaluate/MAESTRO/test/Godvaersdagen_original1.flac'.pred.mid\",\n",
-        "        \"Sony HFT\": \"midifiles/Godvaersdagen_original_transcribedsony004001.mid\",\n",
-        "        \"SemiCRF\": \"midifiles/Godvaersdagen_original1_transkun.mid\",\n",
-        "        \"SemiCRF(Epoch152)\": \"midifiles/Godvaersdagen_original1_transkun153.mid\",\n",
-        "        \"SemiCRF(Epoch166)\": \"midifiles/Godvaersdagen_original1_transkun166.mid\",\n",
-        "        \"SemiCRF(Epoch175)\": \"midifiles/Godvaersdagen_original1_transkun175.mid\",\n",
-        "        \"SemiCRF(Epoch189)\": \"midifiles/Godvaersdagen_original1_transkun189.mid\",\n",
-        "        \"SemiCRF(Epoch239)\": \"midifiles/Godvaersdagen_original1_transkun239.mid\"\n",
+        "        \"HPPNet Base\": \"AMT-evaluation/midi-files/runs/transcriber-230425-011304_year/model-60000_evaluate/MAESTRO/test/Godvaersdagen_original1.flac'.pred.mid\",\n",
+        "        \"HPPNet Augmented\": \"AMT-evaluation/midi-files/runs/transcriber-230429-124319_bombs/model-60000_evaluate/MAESTRO/test/Godvaersdagen_original1.flac'.pred.mid\",\n",
+        "        \"Sony HFT\": \"AMT-evaluation/midi-files/Godvaersdagen_original_transcribedsony004001.mid\",\n",
+        "        \"SemiCRF\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun.mid\",\n",
+        "        \"SemiCRF(Epoch152)\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun153.mid\",\n",
+        "        \"SemiCRF(Epoch166)\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun166.mid\",\n",
+        "        \"SemiCRF(Epoch175)\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun175.mid\",\n",
+        "        \"SemiCRF(Epoch189)\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun189.mid\",\n",
+        "        \"SemiCRF(Epoch239)\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun239.mid\"\n",
         "\n",
         "    }\n",
         "\n",
@@ -627,9 +627,9 @@
           "height": 815
         },
         "id": "wJsebuNJtsM0",
-        "outputId": "10c3255e-51e8-4f0b-eca6-5c975b9954cb"
+        "outputId": "1aab2c1c-8b1a-4ed1-cfc6-8a1a52db6565"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,46 +813,46 @@
         "def main():\n",
         "    # Configuration\n",
         "    REFERENCE_FILES = {\n",
-        "        \"godvaer\": \"midifiles/Godvaersdagen_original1.mid\",\n",
-        "        \"spretten\": \"midifiles/Spretten_original.mid\"\n",
+        "        \"godvaer\": \"AMT-evaluation/midi-files/Godvaersdagen_original1.mid\",\n",
+        "        \"spretten\": \"AMT-evaluation/midi-files/Spretten_original.mid\"\n",
         "    }\n",
         "\n",
         "    MODEL_CONFIGS = {\n",
         "        \"HPPNet Base\": {\n",
-        "            \"godvaer\": \"midifiles/runs/transcriber-230425-011304_year/model-60000_evaluate/MAESTRO/test/Godvaersdagen_original1.flac'.pred.mid\",\n",
-        "            \"spretten\": \"midifiles/runs/transcriber-230207-224701_nozzle/model-99000_evaluate/MAESTRO/test/Spretten_original.flac'.pred.mid\"\n",
+        "            \"godvaer\": \"AMT-evaluation/midi-files/runs/transcriber-230425-011304_year/model-60000_evaluate/MAESTRO/test/Godvaersdagen_original1.flac'.pred.mid\",\n",
+        "            \"spretten\": \"AMT-evaluation/midi-files//runs/transcriber-230207-224701_nozzle/model-99000_evaluate/MAESTRO/test/Spretten_original.flac'.pred.mid\"\n",
         "        },\n",
         "        \"HPPNet Augmented\": {\n",
-        "            \"godvaer\": \"midifiles/runs/transcriber-230429-124319_bombs/model-60000_evaluate/MAESTRO/test/Godvaersdagen_original1.flac'.pred.mid\",\n",
-        "            \"spretten\": \"midifiles/runs/transcriber-230429-124319_bombs/model-60000_evaluate/MAESTRO/test/Spretten_original.flac'.pred.mid\"\n",
+        "            \"godvaer\": \"AMT-evaluation/midi-files/runs/transcriber-230429-124319_bombs/model-60000_evaluate/MAESTRO/test/Godvaersdagen_original1.flac'.pred.mid\",\n",
+        "            \"spretten\": \"AMT-evaluation/midi-files/runs/transcriber-230429-124319_bombs/model-60000_evaluate/MAESTRO/test/Spretten_original.flac'.pred.mid\"\n",
         "        },\n",
         "        \"Sony HFT\": {\n",
-        "            \"godvaer\": \"midifiles/Godvaersdagen_original_transcribedsony004001.mid\",\n",
-        "            \"spretten\": \"midifiles/Spretten_original_transcribedsony004001.mid\"\n",
+        "            \"godvaer\": \"AMT-evaluation/midi-files/Godvaersdagen_original_transcribedsony004001.mid\",\n",
+        "            \"spretten\": \"AMT-evaluation/midi-files/Spretten_original_transcribedsony004001.mid\"\n",
         "        },\n",
         "        \"SemiCRF\": {\n",
-        "            \"godvaer\": \"midifiles/Godvaersdagen_original1_transkun.mid\",\n",
-        "            \"spretten\": \"midifiles/Spretten_original_transcribed_transkun.mid\"\n",
+        "            \"godvaer\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun.mid\",\n",
+        "            \"spretten\": \"AMT-evaluation/midi-files/Spretten_original_transcribed_transkun.mid\"\n",
         "        },\n",
         "        \"SemiCRF153\": {\n",
-        "            \"godvaer\": \"midifiles/Godvaersdagen_original1_transkun153.mid\",\n",
-        "            \"spretten\": \"midifiles/Spretten_original_transkun153.mid\"\n",
+        "            \"godvaer\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun153.mid\",\n",
+        "            \"spretten\": \"AMT-evaluation/midi-files/Spretten_original_transkun153.mid\"\n",
         "        },\n",
         "        \"SemiCRF166\": {\n",
-        "            \"godvaer\": \"midifiles/Godvaersdagen_original1_transkun166.mid\",\n",
-        "            \"spretten\": \"midifiles/Spretten_original_transkun166.mid\"\n",
+        "            \"godvaer\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun166.mid\",\n",
+        "            \"spretten\": \"AMT-evaluation/midi-files/Spretten_original_transkun166.mid\"\n",
         "        },\n",
         "        \"SemiCRF175\": {\n",
-        "            \"godvaer\": \"midifiles/Godvaersdagen_original1_transkun175.mid\",\n",
-        "            \"spretten\": \"midifiles/Spretten_original_transkun175.mid\"\n",
+        "            \"godvaer\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun175.mid\",\n",
+        "            \"spretten\": \"AMT-evaluation/midi-files/Spretten_original_transkun175.mid\"\n",
         "    },\n",
         "        \"SemiCRF189\": {\n",
-        "            \"godvaer\": \"midifiles/Godvaersdagen_original1_transkun189.mid\",\n",
-        "            \"spretten\": \"midifiles/Spretten_original_transkun189.mid\"\n",
+        "            \"godvaer\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun189.mid\",\n",
+        "            \"spretten\": \"AMT-evaluation/midi-files/Spretten_original_transkun189.mid\"\n",
         "    },\n",
         "        \"SemiCRF239\": {\n",
-        "            \"godvaer\": \"midifiles/Godvaersdagen_original1_transkun239.mid\",\n",
-        "            \"spretten\": \"midifiles/Spretten_original_transkun239.mid\"\n",
+        "            \"godvaer\": \"AMT-evaluation/midi-files/Godvaersdagen_original1_transkun239.mid\",\n",
+        "            \"spretten\": \"AMT-evaluation/midi-files/Spretten_original_transkun239.mid\"\n",
         "    }\n",
         "     }\n",
         "\n",
@@ -944,9 +944,9 @@
           "height": 815
         },
         "id": "J0bIlvsa0xVq",
-        "outputId": "2e502d50-5b5c-4a53-fde5-2a0e216bd411"
+        "outputId": "b239125d-2c7e-4193-9b37-20887fc80095"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
